# mregexp

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  mregexp.c  mregexp.h  sandbox.c  test.c
.github/workflows/: build-and-test.yml
src/: mregexp.c  mregexp.h
tests/: basic_string_matching.c  dummy.c  parse_utf8.c
